@@ -100,275 +100,275 @@ import java.util.stream.StreamSupport;
 @EnableConfigurationProperties({JpaProperties.class, HibernateProperties.class})
 public class AppConfig implements WebMvcConfigurer, SchedulingConfigurer, ApplicationListener {
 
-    @Autowired
-    private ApplicationContext applicationContext;
+  @Autowired
+  private ApplicationContext applicationContext;
 
-    private boolean applicationReady;
+  private boolean applicationReady;
 
-    @Bean
-    public HQueryLogger hQueryLogger() {
-        return new HQueryLogger() {
-            @Override
-            public void info(String message) {
-                log.info(message);
-            }
+  @Bean
+  public HQueryLogger hQueryLogger() {
+    return new HQueryLogger() {
+      @Override
+      public void info(String message) {
+        log.info(message);
+      }
 
-            @Override
-            public void error(String message) {
-                log.error(message);
-            }
-        };
-    }
+      @Override
+      public void error(String message) {
+        log.error(message);
+      }
+    };
+  }
 
-    @Bean
-    public EntityManagerFactoryBuilder entityManagerFactoryBuilder(
-            JpaProperties jpaProperties,
-            ObjectProvider<PersistenceUnitManager> persistenceUnitManager,
-            ObjectProvider<EntityManagerFactoryBuilderCustomizer> customizers) {
-        HibernateJpaVendorAdapter jpaVendorAdapter = new HibernateJpaVendorAdapter();
-        EntityManagerFactoryBuilder builder = new EntityManagerFactoryBuilder(jpaVendorAdapter,
-                jpaProperties.getProperties(), persistenceUnitManager.getIfAvailable());
-        customizers.orderedStream().forEach((customizer) -> customizer.customize(builder));
-        return builder;
-    }
+  @Bean
+  public EntityManagerFactoryBuilder entityManagerFactoryBuilder(
+    JpaProperties jpaProperties,
+    ObjectProvider<PersistenceUnitManager> persistenceUnitManager,
+    ObjectProvider<EntityManagerFactoryBuilderCustomizer> customizers) {
+    HibernateJpaVendorAdapter jpaVendorAdapter = new HibernateJpaVendorAdapter();
+    EntityManagerFactoryBuilder builder = new EntityManagerFactoryBuilder(jpaVendorAdapter,
+      jpaProperties.getProperties(), persistenceUnitManager.getIfAvailable());
+    customizers.orderedStream().forEach((customizer) -> customizer.customize(builder));
+    return builder;
+  }
 
-    @Bean
-    public ThreadPoolTaskScheduler threadPoolTaskScheduler() {
-        ThreadPoolTaskScheduler threadPoolTaskScheduler = new ThreadPoolTaskScheduler();
-        threadPoolTaskScheduler.setPoolSize(100);
-        threadPoolTaskScheduler.setThreadNamePrefix("th-async-");
-        threadPoolTaskScheduler.setRemoveOnCancelPolicy(true);
-        return threadPoolTaskScheduler;
-    }
+  @Bean
+  public ThreadPoolTaskScheduler threadPoolTaskScheduler() {
+    ThreadPoolTaskScheduler threadPoolTaskScheduler = new ThreadPoolTaskScheduler();
+    threadPoolTaskScheduler.setPoolSize(100);
+    threadPoolTaskScheduler.setThreadNamePrefix("th-async-");
+    threadPoolTaskScheduler.setRemoveOnCancelPolicy(true);
+    return threadPoolTaskScheduler;
+  }
 
-    public void configureAsyncSupport(AsyncSupportConfigurer configurer) {
-        configurer.setTaskExecutor(threadPoolTaskScheduler());
-    }
+  public void configureAsyncSupport(AsyncSupportConfigurer configurer) {
+    configurer.setTaskExecutor(threadPoolTaskScheduler());
+  }
 
-    @Bean
-    public WebMvcRegistrations mvcRegistrations() {
-        return new WebMvcRegistrations() {
-            private final ExtRequestMappingHandlerMapping handlerMapping = new ExtRequestMappingHandlerMapping();
+  @Bean
+  public WebMvcRegistrations mvcRegistrations() {
+    return new WebMvcRegistrations() {
+      private final ExtRequestMappingHandlerMapping handlerMapping = new ExtRequestMappingHandlerMapping();
 
-            @Override
-            public RequestMappingHandlerMapping getRequestMappingHandlerMapping() {
-                return handlerMapping;
-            }
-        };
-    }
+      @Override
+      public RequestMappingHandlerMapping getRequestMappingHandlerMapping() {
+        return handlerMapping;
+      }
+    };
+  }
 
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/**");
-    }
+  @Override
+  public void addCorsMappings(CorsRegistry registry) {
+    registry.addMapping("/**");
+  }
 
-    // not too safe for now
-    @Bean
-    public CorsFilter corsFilter() {
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(false);
-        config.addAllowedOrigin("*");
-        config.addAllowedHeader("*");
-        config.addAllowedMethod("*");
-        source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
-    }
+  // not too safe for now
+  @Bean
+  public CorsFilter corsFilter() {
+    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    CorsConfiguration config = new CorsConfiguration();
+    config.setAllowCredentials(false);
+    config.addAllowedOrigin("*");
+    config.addAllowedHeader("*");
+    config.addAllowedMethod("*");
+    source.registerCorsConfiguration("/**", config);
+    return new CorsFilter(source);
+  }
 
-    @Bean
-    public List<WidgetEntity> widgetBaseEntities(ClassFinder classFinder) {
-        return ClassFinder.createClassesWithParent(WidgetEntity.class, classFinder);
-    }
+  @Bean
+  public List<WidgetEntity> widgetBaseEntities(ClassFinder classFinder) {
+    return ClassFinder.createClassesWithParent(WidgetEntity.class, classFinder);
+  }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(5);
-    }
+  @Bean
+  public PasswordEncoder passwordEncoder() {
+    return new BCryptPasswordEncoder(5);
+  }
 
-    @Bean
-    public CacheManager cacheManager() {
-        return CacheService.createCacheManager();
-    }
+  @Bean
+  public CacheManager cacheManager() {
+    return CacheService.createCacheManager();
+  }
 
-    @Override
-    public void configureTasks(ScheduledTaskRegistrar taskRegistrar) {
-        taskRegistrar.setScheduler(Executors.newScheduledThreadPool(4));
-    }
+  @Override
+  public void configureTasks(ScheduledTaskRegistrar taskRegistrar) {
+    taskRegistrar.setScheduler(Executors.newScheduledThreadPool(4));
+  }
 
-    @Bean
-    public ObjectMapper objectMapper() {
-        Hibernate5JakartaModule hibernate5Module = new Hibernate5JakartaModule();
-        hibernate5Module.disable(Hibernate5JakartaModule.Feature.USE_TRANSIENT_ANNOTATION);
+  @Bean
+  public ObjectMapper objectMapper() {
+    Hibernate5JakartaModule hibernate5Module = new Hibernate5JakartaModule();
+    hibernate5Module.disable(Hibernate5JakartaModule.Feature.USE_TRANSIENT_ANNOTATION);
 
-        SimpleModule simpleModule = new SimpleModule();
-        simpleModule.addSerializer(String.class, new StringComplexSerializer());
-        simpleModule.addSerializer(SecureString.class, new JsonSerializer<>() {
-            @Override
-            public void serialize(SecureString secureString, JsonGenerator jsonGenerator, SerializerProvider serializerProvider)
-                    throws IOException {
-                jsonGenerator.writeString(secureString.toString());
-            }
-        });
+    SimpleModule simpleModule = new SimpleModule();
+    simpleModule.addSerializer(String.class, new StringComplexSerializer());
+    simpleModule.addSerializer(SecureString.class, new JsonSerializer<>() {
+      @Override
+      public void serialize(SecureString secureString, JsonGenerator jsonGenerator, SerializerProvider serializerProvider)
+        throws IOException {
+        jsonGenerator.writeString(secureString.toString());
+      }
+    });
 
-        simpleModule.addSerializer(Scratch3ExtensionBlocks.class, new JsonSerializer<>() {
-            @Override
-            public void serialize(Scratch3ExtensionBlocks block, JsonGenerator gen, SerializerProvider serializers)
-                    throws IOException {
-                gen.writeStartObject();
-                gen.writeStringField("id", block.getId());
-                if (block.getName() != null) {
-                    gen.writeStringField("name", block.getName());
-                }
-                gen.writeStringField("blockIconURI", block.getBlockIconURI());
-                gen.writeStringField("color1", block.getScratch3Color().getColor1());
-                gen.writeStringField("color2", block.getScratch3Color().getColor2());
-                gen.writeStringField("color3", block.getScratch3Color().getColor3());
-                gen.writeObjectField("blocks", block.getBlocks());
-                gen.writeObjectField("menus", block.getMenus());
-                gen.writeEndObject();
-            }
-        });
-
-        simpleModule.addSerializer(Scratch3Space.class, new JsonSerializer<>() {
-            @Override
-            public void serialize(Scratch3Space extension, JsonGenerator gen, SerializerProvider serializers) throws IOException {
-                gen.writeString("---");
-            }
-        });
-
-        simpleModule.addDeserializer(DeviceBaseEntity.class, new JsonDeserializer<>() {
-            @Override
-            public DeviceBaseEntity deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
-                return applicationContext.getBean(ContextImpl.class).db().get(p.getText());
-            }
-        });
-
-        ObjectMapper objectMapper = new ObjectMapper();
-        objectMapper
-                .disable(DeserializationFeature.FAIL_ON_UNRESOLVED_OBJECT_IDS)
-                .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
-                .registerModule(hibernate5Module)
-                .registerModule(new JsonOrgModule())
-                .registerModule(simpleModule)
-                .setSerializationInclusion(JsonInclude.Include.NON_EMPTY)
-                .addMixIn(BaseEntity.class, Bean2MixIn.class);
-
-        return objectMapper;
-    }
-
-    // Add converters for convert String to desired class in rest controllers
-    @Override
-    public void addFormatters(final FormatterRegistry registry) {
-        registry.addConverter(String.class, DeviceBaseEntity.class, source ->
-                applicationContext.getBean(Context.class).db().get(source));
-    }
-
-    @Bean
-    public MappingJackson2HttpMessageConverter mappingJackson2HttpMessageConverter() {
-        MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-        converter.setPrefixJson(false);
-        converter.setSupportedMediaTypes(Collections.singletonList(MediaType.APPLICATION_JSON));
-        converter.setObjectMapper(objectMapper());
-        return converter;
-    }
-
-    /**
-     * After spring context initialization
-     */
-    @Override
-    public void onApplicationEvent(@NotNull ApplicationEvent event) {
-        if (event instanceof ContextRefreshedEvent cre && !this.applicationReady) {
-            this.applicationReady = true;
-            this.printEnvVariables(cre.getApplicationContext().getEnvironment());
-            ApplicationContext applicationContext = ((ContextRefreshedEvent) event).getApplicationContext();
-            ContextImpl contextImpl = applicationContext.getBean(ContextImpl.class);
-            contextImpl.afterContextStart(applicationContext);
+    simpleModule.addSerializer(Scratch3ExtensionBlocks.class, new JsonSerializer<>() {
+      @Override
+      public void serialize(Scratch3ExtensionBlocks block, JsonGenerator gen, SerializerProvider serializers)
+        throws IOException {
+        gen.writeStartObject();
+        gen.writeStringField("id", block.getId());
+        if (block.getName() != null) {
+          gen.writeStringField("name", block.getName());
         }
+        gen.writeStringField("blockIconURI", block.getBlockIconURI());
+        gen.writeStringField("color1", block.getScratch3Color().getColor1());
+        gen.writeStringField("color2", block.getScratch3Color().getColor2());
+        gen.writeStringField("color3", block.getScratch3Color().getColor3());
+        gen.writeObjectField("blocks", block.getBlocks());
+        gen.writeObjectField("menus", block.getMenus());
+        gen.writeEndObject();
+      }
+    });
+
+    simpleModule.addSerializer(Scratch3Space.class, new JsonSerializer<>() {
+      @Override
+      public void serialize(Scratch3Space extension, JsonGenerator gen, SerializerProvider serializers) throws IOException {
+        gen.writeString("---");
+      }
+    });
+
+    simpleModule.addDeserializer(DeviceBaseEntity.class, new JsonDeserializer<>() {
+      @Override
+      public DeviceBaseEntity deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
+        return applicationContext.getBean(ContextImpl.class).db().get(p.getText());
+      }
+    });
+
+    ObjectMapper objectMapper = new ObjectMapper();
+    objectMapper
+      .disable(DeserializationFeature.FAIL_ON_UNRESOLVED_OBJECT_IDS)
+      .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES)
+      .registerModule(hibernate5Module)
+      .registerModule(new JsonOrgModule())
+      .registerModule(simpleModule)
+      .setSerializationInclusion(JsonInclude.Include.NON_EMPTY)
+      .addMixIn(BaseEntity.class, Bean2MixIn.class);
+
+    return objectMapper;
+  }
+
+  // Add converters for convert String to desired class in rest controllers
+  @Override
+  public void addFormatters(final FormatterRegistry registry) {
+    registry.addConverter(String.class, DeviceBaseEntity.class, source ->
+      applicationContext.getBean(Context.class).db().get(source));
+  }
+
+  @Bean
+  public MappingJackson2HttpMessageConverter mappingJackson2HttpMessageConverter() {
+    MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
+    converter.setPrefixJson(false);
+    converter.setSupportedMediaTypes(Collections.singletonList(MediaType.APPLICATION_JSON));
+    converter.setObjectMapper(objectMapper());
+    return converter;
+  }
+
+  /**
+   * After spring context initialization
+   */
+  @Override
+  public void onApplicationEvent(@NotNull ApplicationEvent event) {
+    if (event instanceof ContextRefreshedEvent cre && !this.applicationReady) {
+      this.applicationReady = true;
+      this.printEnvVariables(cre.getApplicationContext().getEnvironment());
+      ApplicationContext applicationContext = ((ContextRefreshedEvent) event).getApplicationContext();
+      ContextImpl contextImpl = applicationContext.getBean(ContextImpl.class);
+      contextImpl.afterContextStart(applicationContext);
     }
+  }
 
-    private void printEnvVariables(Environment env) {
-        final MutablePropertySources sources = ((AbstractEnvironment) env).getPropertySources();
-        StringBuilder props = new StringBuilder();
-        props.append("\n\tActive profiles: %s\n".formatted(Arrays.toString(env.getActiveProfiles())));
-        Map<String, String> variables = StreamSupport
-                .stream(sources.spliterator(), false)
-                .filter(ps -> ps instanceof EnumerablePropertySource)
-                .map(ps -> ((EnumerablePropertySource) ps).getPropertyNames())
-                .flatMap(Arrays::stream)
-                .distinct()
-                .filter(prop -> !(prop.contains("java.class.path") || prop.contains("Path") || prop.contains("java.library.path") || prop.contains("credentials")
-                                  || prop.contains("password")))
-                .collect(Collectors.toMap(prop -> prop, key -> env.getProperty(key, "---"),
-                        (v1, v2) -> {
-                            throw new RuntimeException(String.format("Duplicate key for values %s and %s", v1, v2));
-                        },
-                        TreeMap::new));
-        for (Entry<String, String> entry : variables.entrySet()) {
-            props.append("\t\t%s: %s\n".formatted(entry.getKey(), entry.getValue()));
-        }
-        props.append("\n===========================================");
-        log.info("\n====== Environment and configuration ======{}", props.toString());
+  private void printEnvVariables(Environment env) {
+    final MutablePropertySources sources = ((AbstractEnvironment) env).getPropertySources();
+    StringBuilder props = new StringBuilder();
+    props.append("\n\tActive profiles: %s\n".formatted(Arrays.toString(env.getActiveProfiles())));
+    Map<String, String> variables = StreamSupport
+      .stream(sources.spliterator(), false)
+      .filter(ps -> ps instanceof EnumerablePropertySource)
+      .map(ps -> ((EnumerablePropertySource) ps).getPropertyNames())
+      .flatMap(Arrays::stream)
+      .distinct()
+      .filter(prop -> !(prop.contains("java.class.path") || prop.contains("Path") || prop.contains("java.library.path") || prop.contains("credentials")
+                        || prop.contains("password")))
+      .collect(Collectors.toMap(prop -> prop, key -> env.getProperty(key, "---"),
+        (v1, v2) -> {
+          throw new RuntimeException(String.format("Duplicate key for values %s and %s", v1, v2));
+        },
+        TreeMap::new));
+    for (Entry<String, String> entry : variables.entrySet()) {
+      props.append("\t\t%s: %s\n".formatted(entry.getKey(), entry.getValue()));
     }
+    props.append("\n===========================================");
+    log.info("\n====== Environment and configuration ======{}", props.toString());
+  }
 
-    /**
-     * Force flush cache on request
-     */
-    @Bean
-    public FilterRegistrationBean<Filter> saveDelayFilter() {
-        FilterRegistrationBean<Filter> registrationBean = new FilterRegistrationBean<>();
-        registrationBean.setFilter(new OncePerRequestFilter() {
-            @Override
-            protected void doFilterInternal(@NotNull HttpServletRequest request, @NotNull HttpServletResponse response, @NotNull FilterChain filterChain)
-                    throws IOException, ServletException {
-                applicationContext.getBean(CacheService.class).flushDelayedUpdates();
-                filterChain.doFilter(request, response);
-            }
-        });
-        registrationBean.addUrlPatterns("/map", "/dashboard", "/items/*", "/media/*", "/hardware*/", "/devices/*");
+  /**
+   * Force flush cache on request
+   */
+  @Bean
+  public FilterRegistrationBean<Filter> saveDelayFilter() {
+    FilterRegistrationBean<Filter> registrationBean = new FilterRegistrationBean<>();
+    registrationBean.setFilter(new OncePerRequestFilter() {
+      @Override
+      protected void doFilterInternal(@NotNull HttpServletRequest request, @NotNull HttpServletResponse response, @NotNull FilterChain filterChain)
+        throws IOException, ServletException {
+        applicationContext.getBean(CacheService.class).flushDelayedUpdates();
+        filterChain.doFilter(request, response);
+      }
+    });
+    registrationBean.addUrlPatterns("/map", "/dashboard", "/items/*", "/media/*", "/hardware*/", "/devices/*");
 
-        return registrationBean;
-    }
+    return registrationBean;
+  }
 
-    @Override
-    public void addInterceptors(InterceptorRegistry registry) {
-        registry.addInterceptor(new CacheControlHandlerInterceptor());
-    }
+  @Override
+  public void addInterceptors(InterceptorRegistry registry) {
+    registry.addInterceptor(new CacheControlHandlerInterceptor());
+  }
 
-    @Bean
-    public ProxyExchangeArgumentResolver proxyExchangeArgumentResolver(Optional<RestTemplateBuilder> optional,
-                                                                       ProxyProperties proxy) {
-        RestTemplateBuilder builder = optional.orElse(new RestTemplateBuilder());
-        CloseableHttpClient httpClient = HttpClientBuilder.create().disableRedirectHandling().build();
-        var requestFactory = new HttpComponentsClientHttpRequestFactory(httpClient);
-        RestTemplate template = builder
-                .requestFactory(() -> requestFactory)
-                .build();
-        template.setErrorHandler(new DefaultResponseErrorHandler() {
-            @Override
-            public void handleError(ClientHttpResponse response) throws IOException {
-            }
-        });
-        template.getMessageConverters().add(new ByteArrayHttpMessageConverter() {
-            @Override
-            public boolean supports(Class<?> clazz) {
-                return true;
-            }
+  @Bean
+  public ProxyExchangeArgumentResolver proxyExchangeArgumentResolver(Optional<RestTemplateBuilder> optional,
+                                                                     ProxyProperties proxy) {
+    RestTemplateBuilder builder = optional.orElse(new RestTemplateBuilder());
+    CloseableHttpClient httpClient = HttpClientBuilder.create().disableRedirectHandling().build();
+    var requestFactory = new HttpComponentsClientHttpRequestFactory(httpClient);
+    RestTemplate template = builder
+      .requestFactory(() -> requestFactory)
+      .build();
+    template.setErrorHandler(new DefaultResponseErrorHandler() {
+      @Override
+      public void handleError(ClientHttpResponse response) throws IOException {
+      }
+    });
+    template.getMessageConverters().add(new ByteArrayHttpMessageConverter() {
+      @Override
+      public boolean supports(Class<?> clazz) {
+        return true;
+      }
 
-            @Override
-            public byte[] readInternal(Class<? extends byte[]> clazz, HttpInputMessage message) throws IOException {
-                // avoid read content-length. sometimes it's not match!
-                return message.getBody().readAllBytes();
-            }
-        });
-        ProxyExchangeArgumentResolver resolver = new ProxyExchangeArgumentResolver(template);
-        resolver.setHeaders(proxy.convertHeaders());
-        resolver.setAutoForwardedHeaders(proxy.getAutoForward());
-        resolver.setSensitive(proxy.getSensitive()); // can be null
-        return resolver;
-    }
+      @Override
+      public byte[] readInternal(Class<? extends byte[]> clazz, HttpInputMessage message) throws IOException {
+        // avoid read content-length. sometimes it's not match!
+        return message.getBody().readAllBytes();
+      }
+    });
+    ProxyExchangeArgumentResolver resolver = new ProxyExchangeArgumentResolver(template);
+    resolver.setHeaders(proxy.convertHeaders());
+    resolver.setAutoForwardedHeaders(proxy.getAutoForward());
+    resolver.setSensitive(proxy.getSensitive()); // can be null
+    return resolver;
+  }
 
-    @JsonIdentityInfo(generator = JSOGGenerator.class, property = "entityID", resolver = JSOGResolver.class)
-    interface Bean2MixIn {
+  @JsonIdentityInfo(generator = JSOGGenerator.class, property = "entityID", resolver = JSOGResolver.class)
+  interface Bean2MixIn {
 
-    }
+  }
 }
